# [build-system]
# requires      = ["setuptools>=61.0.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "luti"
version = "1.0.0"
description = "Support for lookup-tables and inversion"
readme = "README.md"
authors = [{ name = "Paul Ockenfuß", email = "p-necko@t-online.de" }]
license = { file = "LICENSE" }
# classifiers = [
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
# ]
keywords = ["lookuptable", "interpolation"]
dependencies = [
    "scipy",
    "sklearn",
    "xarray",
    "numpy",
    "alphashape>1.3.0",
    "shapely",
    "pandas"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "matplotlib", "jupyter"]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

# [project.urls]
# Homepage = "https://github.com/realpython/reader"

# [project.scripts]
# realpython = "reader.__main__:main"